2005-03-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block) <op_swap>: Finish set-up of new
	variable.
	(visit_bytecode_block) <op_new>: Added casts.
	(visit_bytecode_block): Use convert, not CONVERT_EXPR.
	(handle_convert): Likewise.
	(visit_bytecode_block): Use convert, not NOP_EXPR.
	(handle_return): Likewise.
	(slot_type): Removed.
	(handle_convert): Rewrote how min and max are computed.
	(visit_bytecode_block): Indentation fixes.
	(push): Use type_object_ptr.
	(cast): Use 'convert'.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Use VERIFY_BRANCH_TARGET.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Set DECL_CONTEXT on stack and
	local variables.  Correctly set local_slots[] elements.

2005-03-27  Tom Tromey  <tromey@redhat.com>

	* lower.cc (visit_bytecode_block): Use type_object_ptr.
	(find_generic_slot): Likewise.
	(full_condition): Don't call 'push'.

2005-03-27  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Lay out declaring class.  Handle
	interface calls.
	(build_field_reference): Likewise.

2005-03-27  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_direct_class_reference): New method.
	(build_new): Fix type of result.
	(build_class_reference): Fix type of array reference.
	* abi.hh (gcj_abi::build_direct_class_reference): New method.
	(cxx_abi::build_direct_class_reference): Likewise
	(bc_abi::build_direct_class_reference): Declare.
	* classobj.hh (class_object_creator::create_index_table):
	Updated.
	* classobj.cc (create_index_table): Added 'table_decl' argument.
	Fixed computation of constructor contents.
	(create_class_instance): Updated.  Use
	build_direct_class_reference.
	(handle_interfaces): Use build_direct_class_reference.
	* builtins.cc (get_itable_decl): New method.
	* builtins.hh (tree_builtins::get_itable_decl): Declare.
	(tree_builtins::itable_map): New field.

2005-03-27  Tom Tromey  <tromey@redhat.com>
